# strix

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-BSL  LICENSING.md  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  pyproject.toml
.cargo/: audit.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
Project_Docs/: README.md
Project_Docs/bug_hunt/: README.md
Project_Docs/bug_hunt/questionnaire_packs/2026-04-02/: DOC-001_SWARM_TICK_SAFETY_AND_CROSS_CRATE_INTEGRATION_QUESTIONNAIRE_2026-04-02.md  DOC-002_MISSION_BRAIN_INTENT_FFI_AND_STATEFUL_ADAPTATION_QUESTIONNAIRE_2026-04-02.md  DOC-003_MESH_AUCTION_AND_HIGHER_ORDER_COORDINATION_QUESTIONNAIRE_2026-04-02.md  DOC-004_OPTIMIZER_CONTEXTUAL_EVOLUTION_AND_SURROGATE_QUESTIONNAIRE_2026-04-02.md  DOC-005_SINGLE_POINT_OF_FAILURE_ANALYSIS_2026-04-02.md  INDEX.md  MANIFEST.json
Project_Docs/bug_hunt/runs/: RUN_REGISTRY.jsonl
Project_Docs/bug_hunt/runs/RUN-2026-04-02_pr3_tick-safety-ffi-spof/: checkpoints.jsonl  run_result.json  summary.md
Project_Docs/bug_hunt/runs/_TEMPLATE_RUN_FOLDER/: checkpoints.jsonl  run_result.json  summary.md
Project_Docs/commercial/: PRIVATE_COMPANION_BOUNDARY.md
Project_Docs/provenance/: BRANCH_PROTECTION.md  OFFICIAL_RELEASES.md
Project_Docs/testing/: EVIDENCE_HARNESS.md  public_test_matrix.json
crates/strix-adapters/: Cargo.toml
crates/strix-adapters/src/: command.rs  lib.rs  mavlink.rs  ros2.rs  simulator.rs  traits.rs
crates/strix-adapters/tests/: phase1_integration.rs
crates/strix-auction/: Cargo.toml
crates/strix-auction/benches/: auction.rs  scale_auction.rs
crates/strix-auction/src/: antifragile.rs  auctioneer.rs  bidder.rs  lib.rs  policy.rs  portfolio.rs  risk.rs
crates/strix-core/: Cargo.toml
crates/strix-core/benches/: particle_filter.rs
crates/strix-core/src/: adversarial.rs  anomaly.rs  cbf.rs  ew_response.rs  fleet_metrics.rs  formation.rs  frames.rs  hysteresis.rs  intent.rs  lib.rs  particle_common.rs  particle_nav.rs  pipeline.rs  python.rs  regime.rs  roe.rs  state.rs  temporal.rs  threat_tracker.rs  uncertainty.rs  units.rs
crates/strix-core/src/gcbf/: barrier.rs  config.rs  graph.rs  knn.rs  mod.rs  nn.rs  weights.rs
crates/strix-core/tests/: proptest_particle.rs
crates/strix-mesh/: Cargo.toml
crates/strix-mesh/benches/: scale_gossip.rs
crates/strix-mesh/src/: belief.rs  bool_gates.rs  byzantine.rs  comms.rs  consensus.rs  contagion.rs  degradation.rs  evidence_graph.rs  fact.rs  fractal.rs  gbp.rs  gossip.rs  hypergraph.rs  lib.rs  partition.rs  quarantine.rs  spatial_belief.rs  stigmergy.rs  trust.rs
crates/strix-optimizer/: Cargo.toml
crates/strix-optimizer/src/: config.rs  contextual_archive.rs  evaluator.rs  graph_surrogate.rs  heterogeneity.rs  lib.rs  main.rs  param_space.rs  pareto.rs  report.rs  smco.rs
crates/strix-playground/: Cargo.toml
crates/strix-playground/src/: engine.rs  lib.rs  playground.rs  presets.rs  report.rs  scenario.rs  threats.rs
crates/strix-playground/tests/: presets_smoke.rs
crates/strix-python/: Cargo.toml
crates/strix-python/src/: auction_wrappers.rs  core_wrappers.rs  lib.rs
crates/strix-swarm/: Cargo.toml
crates/strix-swarm/benches/: tick.rs
crates/strix-swarm/src/: anti_panic.rs  convert.rs  criticality.rs  fear_adapter.rs  health.rs  lib.rs  micro_adapt.rs  order_params.rs  stability.rs  tick.rs
crates/strix-swarm/tests/: fault_injection.rs  feedback_stability.rs  island_module_integration.rs  phi_sim_integration.rs  regression.rs  twenty_drone_integration.rs
crates/strix-xai/: Cargo.toml
crates/strix-xai/src/: correlation.rs  lib.rs  narrator.rs  reason_codes.rs  replay.rs  trace.rs
demo/: README.md  video_script.md
demo/video/: config.py  main.py  pipeline.py
demo/video/renderer/: __init__.py  audio.py  cairo_surface.py  easing.py  hud.py  map_renderer.py  particles.py  shapes.py  text_renderer.py
demo/video/scenes/: __init__.py  base.py  scene1_radio.py  scene2_recon.py  scene3_loss.py  scene4_adversarial.py  scene5_scale.py
docs/: architecture.md  assessment_note_2026-03-24.md  competitor_comparison.md  devils_advocate_2026-03-25.md  itar_analysis.md  strategy_memo_2026-03-25.md  strix_external_assessment_2026-03-26.md  trading_mapping.md
paper/: references.bib  strix-paper.tex
python/strix/: __init__.py  _strix_core.py  adversarial.py  brain.py  orientation.py
python/strix/digital_twin/: rehearsal.py  twin.py  viz.py
python/strix/gcbf_training/: __init__.py  dataset.py  model.py  train.py
python/strix/llm/: __init__.py  autonomy_llm.py  edge_inference.py  military_llm.py
python/strix/nlp/: ack_loop.py  intent_parser.py
python/strix/temporal/: multi_horizon.py  scenario_harness.py
python/tests/: conftest.py  test_adversarial.py  test_auction_ffi.py  test_brain_ffi.py  test_ffi.py  test_gcbf_training.py  test_local_git_hooks.py  test_multi_horizon.py  test_public_llm_api.py  test_release_manifest.py  test_scenario_regression.py  test_strix_scenario_contract.py  test_strix_sim_replay.py  test_strix_test_matrix.py
scripts/: install_local_git_hooks.py  strix_release_manifest.py  strix_scenario_contract.py  strix_sim_replay.py  strix_test_matrix.py  verify_public_surface.py
sim/scenarios/: README.md  contested_strike.yaml  gps_denied_recon.yaml  mass_attrition.yaml  multi_domain.yaml
