[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "strix"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.26.0",
]

[tool.maturin]
features = ["pyo3/extension-module", "python"]
module-name = "strix._strix_core"
manifest-path = "crates/strix-core/Cargo.toml"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
