[package]
name = "strix-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Particle filter + Kalman + CUSUM + Regime detection for GPS-denied drone navigation"

[lib]
name = "strix_core"
crate-type = ["rlib"]

[dependencies]
ndarray.workspace = true
rayon.workspace = true
nalgebra.workspace = true
rand.workspace = true
rand_distr.workspace = true
serde.workspace = true
thiserror.workspace = true

[[bench]]
name = "particle_filter"
harness = false

[dev-dependencies]
serde_json.workspace = true
criterion.workspace = true
