[package]
name = "strix-mesh"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Decentralized mesh coordination: fractal hierarchy, stigmergy, gossip protocol"

[dependencies]
# strix-core = { path = "../strix-core" }  # TODO: re-enable when strix-core is ready
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
rayon.workspace = true
thiserror.workspace = true
